added service worker which installs cpi data on installation/update

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,11 @@
     },
     "host_permissions": [
         "https://api.bls.gov/publicAPI/v1/*"
-    ]
+    ],
+    "permissions": [
+        "storage"
+    ],
+    "background": {
+        "service_worker": "background.js"
+    }
 }
