--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,12 @@
     ],
     "background": {
         "service_worker": "background.js"
+    },
+    "commands": {
+        "_execute_action": {
+            "suggested_key": {
+                "default": "Alt+Shift+C"
+            }
+        }
     }
 }
